software/stamp/sample/applications/api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-api
  labels:
    app.kubernetes.io/name: sample-api
    osdu-ci.application: api
