software/stamp/sample/applications/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-api
  namespace: sample-api
  labels:
    osdu-ci.application: api
spec:
  selector:
    app: sample-api
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
